--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "pages":[
     "pages/index/index",
     "pages/select/select",
-    "pages/logs/logs"
+    "pages/result/result"
   ],
   "window":{
     "backgroundTextStyle":"light",
